# websockets-to-kafka-python

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
typings/aiokafka/: __init__.pyi
typings/aiokafka/consumer/: consumer.pyi
