[project]
name = "websockets-to-kafka-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11.0",
    "tenacity>=9.0.0",
    "websockets>=13.1",
]

[tool.pyright]
strict = ["."]
exclude = ["typings", ".venv"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.382.post1",
]
